# r2-thinmcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/r2_thinmcp/: __init__.py  server.py
